# openstreetlifting

./: .env  .gitignore  .release-please-manifest.json  CHANGELOG.md  LICENSE-DATA  README.md  release-please-config.json  renovate.json
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  release.toml
backend/.sqlx/: query-018e253502a8b6e79b0b728871d21affba927abf49807e5e9ddee1b35724e1f9.json  query-08b93587abe085124210d7caa6627a4a67c6b2861e1da85bab9a10c87506640f.json  query-0996b875a65d862dfe9770bf58be802c4d23dbb9158c8cd7230af53bac155612.json  query-0b1ddfffd2341ab9518e00f80679fadc7d4f4cb5d2c0a5ecbd7ee4e3e0cd98cd.json  query-0bc8299c1db50341014a4e12b10d9fd463047ea612b42f36924f3214220ca25d.json  query-0f61702084c6191473b395a9f351ed64b678972f229da3bffb616575cee9bbdd.json  query-117acfd106344c63850cfc6bd62a294080459a14bb951ff83a65f73a3af6b27d.json  query-187f94d887c6fa94d08b3ba8371aa61e8a5eebe64126886a1eb0cb7558d7ff89.json  query-1901bb0bbb551efb136fe66342dda6e9e2f198981c214cc6f4e0d24dd49009cd.json  query-1ac2ea57ef90687bcafaf7010b074eb6fdc67c517f3b2c9be2f64a43c2e72b69.json  query-1d5af56e22f6f57e5d2a994797ab9bb4c2aff658efc9efcb410d0823a6d4bc8c.json  query-27c4d4ed0339a89428295d968d307cf0a2014a4295b1535151a7c34ccd06a958.json  query-2ce97fdf843c00fb9974df56255615a71faebfc60eb53be1e6d1d6622d785d3a.json  query-39602991b6960f0c4755ab6b96a0079a55af8c9a4dc8dad70811da3ae526a4c5.json  query-3e1a72bfea73059e1d846ec6874279c998ac78aa23df1a70679aedb15ede019c.json  query-40ddde0b26472f5ef12240374f502d316ad09ab84f79ca8a4d956849f4da8e78.json  query-43b0775a37dd25ac65ab7f14f419e2cfff7c5463ae484c4c7eaa7dfaac5d2d60.json  query-4a328a970e5447f676cd04c90c2d6c777fb3ac4fddeab9830802cae50c3ef25e.json  query-4d6c984bec3fe5235261725fdef0ad16faf36166907c95438bcf69adc66aa63d.json  query-4e5407289d2c5203bc40f92e04afa8fb970076f2ccfd9115d60c51724989480c.json  query-4f5d21dc1fe996f2aad7119b532792b07cbf826745db30a095b42122ddbda23e.json  query-5609ec0aeb69cb0b8d22121a2217c09ff997e8efb216e429efbfd4b41ba01bbb.json  query-5f9ad9dfed1415f1384ee0f76b07f27ad5ba5238e22383a1f16efc9ea3f966e7.json  query-64a04bbb65980760eada2b8ceadb4b158179c06b660eeee5782c8f31908c72ba.json  query-6ab14200810d14e0292e4e53b7ae3b1b5121b4ed0028c28bfd86b47e188a1776.json  query-7909885266786fbf25566531e37abf60c70cfeb59504162c2f33944b4ab692bb.json  query-7b328a4c1d08bf8b48faa6b6bdf3de50788fae2f9099841a927b1500cd2379a6.json  query-7bb8c9d205dba5801e498e7ccf944bf611618e7f45d5d2aacbfbb050619a51a6.json  query-7c44ded16f4c3bc963cd95936259796504d3494deb32b542fbbde9dffbee6de3.json  query-7ca06df1a2dc4c8f4da1ccbd01b7b516dc6d37bb504d283779d31b6a5ae51eeb.json  query-7e04c4f9ce4c7672d4f6e686bf7fcf27d0fff5d69a2b7ed413b3cd96dd788c2e.json  query-8ca4362f2b328d898aef436723a5b41a687cca832825c3b73ac07e1f0c8d2421.json  query-92872278de7ec46dd6b598690e2a3fa0427bd70d2392f15d4b2c48ce57635341.json  query-98223601465fe3e2f2201ddda97c4c25d1e4fa4d171d2b37dd6e81beb378b695.json  query-9f43d0d8428200ab5ff8d039fb88aafe01ed98feaefab0e27cd34db0395f9c70.json  query-a7820039fdbf03c7fed83df84c301312880295646b2ab5cc7d0371839e9bf624.json  query-a93bb5a358b28f6b9e9b545bc8a1fa5799b6bc4f31bf5c423e885a5703965dc3.json  query-b10fbfeab89923869bd0eb5886f2816a5341b4f13c6b50d26434f4f4425c29b7.json  query-bc07c54b4b6b06adf98adb73365ced64a5f4829a7f090a232d50f9d0372f516a.json  query-bfb3fb87316b61e6a8131ffa0ff5c729b531dea3522444af0bf85737982c3e6e.json  (+12 more)
backend/crates/importer/: Cargo.toml
backend/crates/importer/src/: error.rs  lib.rs
backend/crates/importer/src/canonical/: mod.rs  transformer.rs
backend/crates/osl_api/: Cargo.toml
backend/crates/osl_api/src/: error.rs  main.rs
backend/crates/osl_api/src/handlers/: athletes.rs  competitions.rs  ranking.rs  ris.rs
backend/crates/osl_api/src/middleware/: auth.rs
backend/crates/osl_api/src/routes/: athletes.rs  competitions.rs  health.rs  mod.rs  ranking.rs  ris.rs
backend/crates/osl_db/: Cargo.toml
backend/crates/osl_db/migrations/: 20251118183154_seed_streetlifting_movements.sql  20251121104208_add_athlete_slug.sql  20251121113547_add_performance_indexes.sql  20251123174241_ris_computation_tables.sql
backend/crates/osl_db/src/: error.rs  lib.rs
backend/crates/osl_db/src/dto/: athlete.rs  common.rs  ranking.rs  ris.rs
backend/crates/osl_db/src/models/: athlete.rs  attempt.rs  competition.rs  competition_movement.rs  lift.rs  ris_formula.rs  rulebook.rs  social.rs
backend/crates/osl_db/src/repository/: athlete.rs  mod.rs
backend/crates/osl_db/src/services/: mod.rs  ris_computation.rs
backend/crates/osl_domain/: Cargo.toml
backend/crates/osl_domain/src/: lib.rs  ris.rs
backend/crates/osl_domain/src/models/: athlete_social.rs  category.rs  federation.rs  mod.rs  movement.rs  normalized_name.rs  record.rs  ris_score.rs
backend/crates/osl_importer/: Cargo.toml  README.md
backend/crates/osl_importer/src/: error.rs  movement_mapper.rs  traits.rs
backend/crates/osl_importer/src/canonical/: models.rs  transformer.rs  validator.rs
backend/crates/osl_importer/src/sources/: mod.rs
backend/crates/storage/migrations/: 20251108184312_init_database.sql  20251206205652_remove_groups.sql
backend/crates/storage/src/dto/: competition.rs  mod.rs
backend/crates/storage/src/models/: competition_participant.rs  normalized_name.rs
backend/crates/storage/src/repository/: competition.rs  ranking.rs  ris.rs
backend/crates/storage/src/services/: ris_computation.rs
backend/crates/web/: Cargo.toml
backend/crates/web/src/: config.rs
backend/docs/: book.toml
backend/docs/src/: SUMMARY.md  canonical-format.md
backend/helm/templates/: deployment.yaml
backend/imports/annecy-4-lift-2025/: 2025-12-07T14-05-30_annecy-4-lift-2025-dimanche-matin-39_liftcontrol.json  2025-12-07T15-18-10_annecy-4-lift-2025-dimanche-matin-39_liftcontrol.json  2025-12-07T15-18-11_annecy-4-lift-2025-dimanche-apres-midi-40_liftcontrol.json  2026-05-22T11-15-23_annecy-4-lift-2025-dimanche-apres-midi-40_liftcontrol.json  2026-05-22T11-15-23_annecy-4-lift-2025-dimanche-matin-39_liftcontrol.json
(+100 files in other folders)
