[package]
name = "importer"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.52", features = ["derive", "env"] }
dotenvy = "0.15.7"
lazy_static = "1.4"
reqwest = { version = "0.12.24", features = ["json"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "rust_decimal",
  "uuid",
] }
storage = { path = "../storage" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = "1.18.1"
