[package]
name = "osl_api"
version = "0.1.0"
edition = "2024"

[dependencies]
osl_db = { path = "../osl_db" }
osl_domain = { path = "../osl_domain" }
anyhow = "1.0.102"
axum = "0.8.8"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
