[package]
name = "osl_api"
edition = "2024"
version.workspace = true

[dependencies]
osl_db = { path = "../osl_db" }
osl_domain = { path = "../osl_domain" }
anyhow.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
uuid.workspace = true
axum = "0.8.8"
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = [
  "cors",
  "trace",
  "timeout",
  "request-id",
  "compression-gzip",
  "compression-br",
] }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
