[package]
name = "osl_db"
edition = "2024"
version.workspace = true

[dependencies]
osl_domain = { path = "../osl_domain" }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.38", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "migrate",
  "chrono",
  "rust_decimal",
  "uuid",
] }
utoipa = { version = "5.4.0", features = ["chrono", "decimal", "uuid"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
validator = { version = "0.18", features = ["derive"] }
