[package]
name = "osl_db"
edition = "2024"
version.workspace = true

[dependencies]
osl_domain = { path = "../osl_domain" }
chrono.workspace       = true
rust_decimal.workspace = true
serde.workspace        = true
sqlx.workspace         = true
utoipa.workspace       = true
uuid.workspace         = true
validator = { version = "0.20", features = ["derive"] }
