[package]
name = "osl_domain"
edition = "2024"
version.workspace = true

[dependencies]
chrono.workspace       = true
rust_decimal.workspace = true
serde.workspace        = true
sqlx                   = { workspace = true, features = ["postgres", "chrono", "rust_decimal", "uuid"] }
thiserror.workspace    = true
utoipa.workspace       = true
uuid.workspace         = true
