[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
storage = { path = "../storage/" }
actix-cors = "0.7"
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
anyhow = "1.0.100"
dotenvy = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
validator = { version = "0.18", features = ["derive"] }
